# transonic

./: .appveyor.yml  .flake8  .gitlab-ci.yml  .hgignore  .hgtags  .readthedocs.yml  .sonarcloud.properties  .travis.yml  AUTHORS.rst  CHANGES.md  CHANGES.rst  CONTRIBUTING.md  LICENSE.txt  Makefile  README.md  README.rst  ROADMAP.md  ROADMAP.rst  THANKS.md  THANKS.rst  bitbucket-pipelines.yml  environment.yml  noxfile.py  pixi.toml  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  warning.md
.github/workflows/: ci-linux.yml  ci-windows.yml
_transonic_testing/: LICENSE  for_test_exterior_import_jit.py  for_test_init.py  for_test_justintime.py  pyproject.toml  setup.cfg
_transonic_testing/src/_transonic_testing/: __init__.py  for_test_exterior_import_jit.py  for_test_justintime.py
_transonic_testing/src/_transonic_testing/__jax__/: for_test_init.py
data_tests/: Makefile  add_inline.py  assign_func_boost.py  assign_func_jit.py  block_fluidsim.py  blocks_type_hints.py  boosted_class_use_import.py  boosted_func_use_import.py  class_blocks.py  class_rec_calls.py  classic.py  default_params.py  exterior_import_boost.py  exterior_import_boost_2.py  methods.py  mixed_classic_type_hint.py  no_arg.py  no_pythran_.py  row_sum_boost.py  subpackages.py  type_hint.py  type_hint_notemplate.py
data_tests/__jax__/: __ext__MyClass2__exterior_import_boost.py  __ext__func__exterior_import_boost.py  __ext__func__exterior_import_boost_2.py  add_inline.py  assign_func_boost.py  block_fluidsim.py  blocks_type_hints.py  boosted_class_use_import.py  boosted_func_use_import.py  class_blocks.py  class_rec_calls.py  classic.py  default_params.py  methods.py  mixed_classic_type_hint.py  no_arg.py  row_sum_boost.py  subpackages.py  type_hint_notemplate.py
data_tests/ipynb/: test.ipynb
data_tests/package_for_test_meson/: README.md  meson.build  meson.options  pyproject.toml
data_tests/package_for_test_meson/src/package_for_test_meson/: bar.py  foo.py  for_test__numba__meson.build  for_test__python__meson.build  for_test__pythran__meson.build  meson.build
data_tests/package_for_test_meson/tests/: test_bar.py  test_foo.py
data_tests/saved__pythran__/: block_fluidsim.py  blocks_type_hints.py  boosted_class_use_import.py  boosted_func_use_import.py  classic.py  no_arg.py  type_hint_notemplate.py
data_tests/test_packaging/: add.py  add_cython.c  add_cython.pyx  base.py  base_func_import.py  base_mod_import.py  setup.py
doc/: HOWTO_build_the_doc  Makefile  backends.md  backends.rst  conf.py  create_pythran_file.py  cython_backend.md  environment.yml  example_class.py  example_classic.py  examples.rst  for_dev.md  for_dev.rst  index.md  index.rst  install.md  other_backends.rst  overview.md  packaging.md  pypy.rst  requirements.txt  roadmap.rst  short-tour.md  thanks.md  thanks.rst  todo.rst  try_create_pythran_file.py  universal_booster.rst
doc/backends/: cython.md  numba.md  other.rst  pythran.rst
doc/examples/: blocks.py  blocks.rst  blocks_type_hints.py  cachedjit.rst  class_blocks.py  class_blocks_alternative_syntax.py  classic.py  classic.rst  classic_include.py  jit_dict.py  jit_fib.py  local_module.py  methods.py  methods.rst  methods_cachedjit.py  methods_jit.py  methods_using_function.py  methods_with_include.py  mixed_classic_type_hint.py  perf_numba.py  pythran_class.py  pythran_class_with_calls.py  type_hint.py  type_hint_notemplate.py  type_hint_shape.py  type_hints.py  type_hints.rst  type_hints_notemplate.py  type_hints_simple.py  using_cachedjit.py  using_cachedjit.rst  using_cachedjit_diff_types.py  using_cachejit.py  using_jit.py  using_jit.rst  using_jit_diff_types.py
doc/for_dev/: debug.rst  pypy.rst  todo.rst  typing.md
docker/: Dockerfile  hgrc
fluidpythran/: __init__.py  _version.py  aheadoftime.py  annotation.py  cached_jit.py  cachedjit.py  compat.py  config.py  dist.py  files_maker.py  for_test_cached_jit.py  for_test_cachedjit.py  for_test_init.py  for_test_justintime.py  justintime.py  log.py  mpi.py  pythranizer.py  run.py  test_cached_jit.py  test_cachedjit.py  test_dist.py  test_init.py  test_init_fluidpythranized.py  test_justintime.py  test_run.py  test_util.py  toolchain.py  transpiler.py  util.py
fluidpythran_cl/: pythran_fluid.py  run_pythran.py
lib/: setup.cfg
src/_transonic_testing/: for_test_exterior_import_jit_2.py
src/transonic/: __init__.py  _version.py  aheadoftime.py  compiler.py  config.py  dist.py  init_meson.py  justintime.py  log.py  mpi.py  path_data_tests.py  run.py  signatures.py  typing.py  util.py
src/transonic_cl/: clean_dir.py  cython.py  cythonize.py  get_includes.py  init_meson.py  run_backend.py
tests/: test_build_ext.py  test_clean_dir.py  test_dist.py  test_get_includes.py  test_init.py  test_init_meson.py  test_init_transonified.py  test_justintime.py  test_meson.py  test_run.py  test_typing.py  test_util.py
tests/analyses/: test_analyses_util.py  test_exast.py
tests/backends/: test_backends.py  test_backends_typing.py  test_cython.py
tmp/: bug_method.py  bug_multilevel.py  bug_type_hints_same_type.py  cython_class.py  cython_example.py  cython_jit.py  cython_multitype_example.py  cython_test.py  detect_extensions.py  for_test_cython.py
tmp/analyses/: analyse.py  capturex.py  filter_body.py  recreate_annotations.py
tmp/bench_fxfy/: Makefile  README.md  bench.py  mod_pythran.py
tmp/cython_backend/: README.md
transonic/: __init__.py  _version.py  aheadoftime.py  annotation.py  compat.py  compiler.py  config.py  dist.py  exterior_import_jit.py  for_test_exterior_import_jit.py  for_test_exterior_import_jit_2.py  for_test_init.py  for_test_justintime.py  for_test_numba.py  justintime.py  log.py  mpi.py  progress.py  pythranizer.py  run.py  signatures.py  test_annotations.py  test_build_ext.py  test_dist.py  test_init.py  test_init_transonified.py  test_justintime.py  test_numba.py  test_run.py  test_typing.py  test_util.py  transpiler.py  typing.py  util.py
transonic_cl/: cython.py  cythonize.py  run_backend.py  run_cython.py  run_pythran.py
(+311 files in other folders)
