[metadata]
name = transonic
description = Make your Python code fly at transonic speeds!
long_description = file: README.rst
keywords = pythran
license = BSD License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 3.6
install_requires =
    gast ==0.4.0
    beniget ==0.3.0
    astunparse >=1.6.3 ; python_version < "3.9"
    # black  # avoid this dependency for now (see https://github.com/ambv/black/issues/552)
    autopep8
    numpy
setup_requires = setuptools

[options.extras_require]
mpi =
    mpi4py

test =
    pytest
    pytest-cov
    nbval
    pythran
    cython
    black
    scipy
    %(mpi)s

doc =
    sphinx
    sphinx_rtd_theme
    numpydoc
    jupyter
    nbsphinx
    recommonmark

dev =
    ipython
    %(doc)s
    %(test)s
    flake8
    pylint

[flake8]
ignore = E501,E225,E226,E303,E201,E202,E203,W503

[coverage:run]
source = ./transonic
data_file = .coverage/coverage
parallel = true
omit =  */test*.py
        */for_test*.py
        */_try_*.py
        transonic/__pythran__/for_test_init.py
        transonic/__cython__/for_test_init.py
        transonic/__numba__/for_test_init.py

[coverage:report]
show_missing = True
exclude_lines =
    raise ValueError
    raise NotImplementedError
    raise RunTimeError
    raise ImportError
    except ImportError:
    except ModuleNotFoundError:
    except IndexError:
    except AttributeError:
    except KeyError:
    except ValueError
    if test:
    if check:
    if __name__ == "__main__":
    if "sphinx" in sys.modules:

[coverage:html]
directory = .coverage

[coverage:xml]
output = .coverage/coverage.xml

[tool:pytest]
addopts = --doctest-modules
