# TODO: I guess the languages depend on the backend
# for example no cpp for backend "python"

# TODO: build dependencies (Cython, Pythran, ...) depend on the backend

project('package_for_test_meson', 'cpp')

py = import('python').find_installation(pure: false)

subdir('src/package_for_test_meson')
